Add some Functionality on state change

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   readonly
                 />
                 <input type="number" id="readMonth" placeholder="00" readonly />
-                <p style="color: white; padding: 4px">/</p>
+                <p id="slash" style="color: white; padding: 4px">/</p>
                 <input type="number" id="readYear" placeholder="00" readonly />
               </div>
             </div>
